First drafts of templates of pages to implement

--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/component-factory-register.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/component-factory-register.html
@@ -1,12 +1,9 @@
 <html>
 
 <body>
-    <form method="post" action="/repo/create/post">
-        Description: <input type="text" name="description" /> <br>
-        Column count: <input type="number" name="cols" /> <br>
-        Row count: <input type="number" name="rows" /> <br>
-        Cell size: <input type="number" name="cellsize" /> <br>
-        Background color: <input type="color" name="bg_color" /> <br>
+    <form method="post" action="/component-factory/register/post">
+        Type: <input type="text" name="type" /> <br>
+        Class: <input type="file" name="class" /> <br>
         <br>
         <input type="submit" />
     </form>
