--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/component-factory-unregister.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/component-factory-unregister.html
@@ -1,14 +1,8 @@
 <html>
 
 <body>
-    <form method="post" action="/repo/create/post">
-        Description: <input type="text" name="description" /> <br>
-        Column count: <input type="number" name="cols" /> <br>
-        Row count: <input type="number" name="rows" /> <br>
-        Cell size: <input type="number" name="cellsize" /> <br>
-        Background color: <input type="color" name="bg_color" /> <br>
-        <br>
-        <input type="submit" />
+    <form method="post" action="/component-factory/unregister/post">
+        Type: <input type="text" name="type" /> <input type="submit" />
     </form>
 </body>
 
