--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/repo-attach.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/repo-attach.html
@@ -1,12 +1,9 @@
 <html>
 
 <body>
-    <form method="post" action="/repo/create/post">
-        Description: <input type="text" name="description" /> <br>
-        Column count: <input type="number" name="cols" /> <br>
-        Row count: <input type="number" name="rows" /> <br>
-        Cell size: <input type="number" name="cellsize" /> <br>
-        Background color: <input type="color" name="bg_color" /> <br>
+    <form method="post" action="/repo/attach/post">
+        ID: <input type="number" name="id" /> <br>
+        User: <input type="text" name="user" /> <br>
         <br>
         <input type="submit" />
     </form>
