Regularly refresh /map-draw

--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/map-draw.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/map-draw.html
@@ -1,6 +1,13 @@
 <html>
 
 <body>
+    <script>
+        const TIMEOUT_INTERVAL = 3000;  // In milliseconds
+
+        setTimeout(function () {
+            location.reload();
+        }, TIMEOUT_INTERVAL);
+    </script>
 </body>
 
 </html>
