Implement Repo.attach

--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/repo-list-attached.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/repo-list-attached.html
@@ -2,7 +2,7 @@
 
 <body>
     <form method="post" action="/repo/list-attached/post">
-        User: <input type="text" name="user" /> <br> <input type="submit" />
+        User: <input type="text" name="user" /> <input type="submit" />
     </form>
 </body>
 
