--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/repo-attach.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/repo-attach.html
@@ -2,7 +2,7 @@
 
 <body>
     <form method="post" action="/repo/attach/post">
-        ID: <input type="number" name="id" /> <br>
+        ID: <input type="number" name="obj_id" /> <br>
         User: <input type="text" name="user" /> <br>
         <br>
         <input type="submit" />
