Implement Repo.delete

--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/repo-delete.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/repo-delete.html
@@ -2,9 +2,7 @@
 
 <body>
     <form method="post" action="/repo/delete/post">
-        ID: <input type="number" name="id" /> <br>
-        <br>
-        <input type="submit" />
+        ID: <input type="number" name="obj_id" /> <input type="submit" />
     </form>
 </body>
 
