Fifth drafts of pages to implement

--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/map-place.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/map-place.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <form method="post" action="/map/place/post">
+    <form method="post" action="/map/{{ id }}/place/post">
         ID: <input type="number" name="id" /> <br>
         Y: <input type="number" name="y" /> <br>
         X: <input type="number" name="x" /> <br>
