--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/component-factory-register.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/component-factory-register.html
@@ -3,7 +3,7 @@
 <body>
     <form method="post" action="/component-factory/register/post">
         Type: <input type="text" name="type" /> <br>
-        Class: <input type="file" name="class" /> <br>
+        Class: <input type="file" name="class" /> <br> <!-- TODO: Handle file -->
         <br>
         <input type="submit" />
     </form>
