--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/map-view.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/map-view.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <form method="post" action="/map/view/post">
+    <form method="post" action="/map/{{ id }}/view/post">
         Y: <input type="number" name="y" /> <br>
         X: <input type="number" name="x" /> <br>
         Height: <input type="number" name="height" /> <br>
