--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/map-get-y-x.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/map-get-y-x.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <form method="post" action="/map/{{ id }}/getxy/post">
+    <form method="post" action="/map/{{ id }}/get-y-x/post">
         Y: <input type="number" name="y" /> <br>
         X: <input type="number" name="x" /> <br>
         <br>
