Finish Component.create

--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/component-factory-create.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/component-factory-create.html
@@ -2,7 +2,7 @@
 
 <body>
     <form method="post" action="/component-factory/create/post">
-        Type: <input type="text" name="description" /> <input type="submit" />
+        Type: <input type="text" name="component_type_name" /> <input type="submit" />
     </form>
 </body>
 
