Implement remaining functions

--- a/CENG445RaceGameContainer/CENG445RaceGame/templates/map-place.html
+++ b/CENG445RaceGameContainer/CENG445RaceGame/templates/map-place.html
@@ -2,7 +2,7 @@
 
 <body>
     <form method="post" action="/map/{{ id }}/place/post">
-        ID: <input type="number" name="id" /> <br>
+        ID: <input type="number" name="obj" /> <br>
         Y: <input type="number" name="y" /> <br>
         X: <input type="number" name="x" /> <br>
         <br>
