Fixes and hacks

--- a/frontend/templates/car-create.html
+++ b/frontend/templates/car-create.html
@@ -2,13 +2,13 @@
 
 <body>
     <form method="post" action="/car/create/post">
-        Model: <input type="text" name="model" /> <br>
-        Acceleration rate: <input type="number" name="acceleration_rate" /> <br>
-        Fuel consumption rate: <input type="number" name="fuel_consumption_rate" /> <br>
-        Deceleration rate: <input type="number" name="deceleration_rate" /> <br>
-        Steer rate: <input type="number" name="steer_rate" /> <br>
-        Maximum speed: <input type="number" name="max_speed" /> <br>
-        Maximum fuel: <input type="number" name="max_fuel" /> <br>
+        Model: <input type="text" name="_MODEL" /> <br>
+        Acceleration rate: <input type="number" name="_ACCELERATION_RATE" /> <br>
+        Fuel consumption rate: <input type="number" name="_FUEL_CONSUMPTION_RATE" /> <br>
+        Deceleration rate: <input type="number" name="_DECELERATION_RATE" /> <br>
+        Steer rate: <input type="number" name="_STEER_RATE" /> <br>
+        Maximum speed: <input type="number" name="_MAX_SPEED" /> <br>
+        Maximum fuel: <input type="number" name="_MAX_FUEL" /> <br>
         <br>
         <input type="submit" />
     </form>
