--- a/frontend/templates/game.html
+++ b/frontend/templates/game.html
@@ -3,10 +3,10 @@
 <body>
     <ul>
         {% for map_id, map_info in map_and_views.items %}
-        <li>Map {{ map_id }}: {{ map_info.0 }}</li>
+        <li>Map {{ map_id }}: {{ map_info.0 }} <button>Draw</button></li>
         <ul>
             {% for view_id, view_description in map_info.1.items %}
-            <li>View {{ view_id }}: {{ view_description }}</li>
+            <li>View {{ view_id }}: {{ view_description }} <button>Draw</button></li>
             {% endfor %}
         </ul>
         {% endfor %}
